--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.11",
+    "nodemailer-express-handlebars": "^4.0.0"
   }
 }
