--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
     "nodemailer-express-handlebars": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.9.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
