--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
-    "nodemailer-express-handlebars": "^4.0.0"
+    "nodemailer-express-handlebars": "^4.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
