ACCOUNT CREATION FLOW

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@ SMTP_SERVICE_SECURE=<conection is secure or not>
 SMTP_SERVICE_PORT=<smtp port>
 SMTP_USER_NAME=<email Address>
 SMTP_USER_PASSWORD=<password>
+FB_TYPE=service_account
+FB_PROJECT_ID=
+FB_KEY_ID=
+FB_PRIVATE_KEY=
+FB_CLIENT_EMAIL=
+FB_CLIENT_ID=
+FB_AUTH_URI=
+FB_TOKEN_URI=
+FB_AUTH_PROVIDER_X59_CERT_URL=
+FB_CLIENT_X509_CERTURL=
