--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "author": "Josep Monjo",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.2.0",
+    "graphql": "^15.3.0",
+    "graphql-request": "^3.1.0",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
     "nodemailer-express-handlebars": "^4.0.0",
     "path": "^0.12.7"
@@ -22,6 +27,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "nodemon": "^2.0.4"
   }
 }
