--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Josep Monjo",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
